force-app/main/default/objects/Contact/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description>Lead scoring measurement.</description>
    <label>Lead Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>