force-app/main/default/objects/Contact/fields/Lead_source_details__c.field-meta.xml
<CustomField>
    <fullName>Lead_source_details__c</fullName>
    <label>Lead Source Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>