force-app/main/default/objects/Contact/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
                <default>true</default>
                <label>Cold</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Researching</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Recycled - Not Ready</fullName>
            </value>
            <value>
                <fullName>Disqualified - Bad Fit</fullName>
            </value>
            <value>
                <fullName>Meeting scheduled</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
                <isActive>false</isActive>
                <label>Nurture</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>