force-app/main/default/objects/Contact/fields/Lead_Status_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Cognism__c</fullName>
    <label>Lead Status (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>