force-app/main/default/objects/Contact/fields/Legal_Basis_for_Processing_Contact_Data__c.field-meta.xml
<CustomField>
    <fullName>Legal_Basis_for_Processing_Contact_Data__c</fullName>
    <label>Legal Basis for Processing Contact Data</label>
    <type>TextArea</type>
</CustomField>