force-app/main/default/objects/Contact/fields/Link_to_the_company_s_website__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_company_s_website__c</fullName>
    <description>Used by inside sales to populate the company&apos;s website that was used for pre-disco call research</description>
    <inlineHelpText>Used by inside sales to populate the company&apos;s website that was used for pre-disco call research</inlineHelpText>
    <label>Link to the company&apos;s website</label>
    <type>Url</type>
</CustomField>