force-app/main/default/objects/Contact/fields/Linkedin_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Cognism__c</fullName>
    <label>Linkedin (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>