force-app/main/default/objects/Contact/fields/List_Campaign_Lead_ID_Cognism__c.field-meta.xml
<CustomField>
    <fullName>List_Campaign_Lead_ID_Cognism__c</fullName>
    <label>List/Campaign Lead ID (Cognism)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>