force-app/main/default/objects/Contact/fields/List_Campaign_Name_Cognism__c.field-meta.xml
<CustomField>
    <fullName>List_Campaign_Name_Cognism__c</fullName>
    <label>List/Campaign Name (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>