force-app/main/default/objects/Contact/fields/Marketing_contact_until_next_update__c.field-meta.xml
<CustomField>
    <fullName>Marketing_contact_until_next_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing contact until next update</label>
    <type>Checkbox</type>
</CustomField>