force-app/main/default/objects/Contact/fields/Marketing_Emails_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Emails_Bounced__c</fullName>
    <label>Marketing Emails Bounced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>