force-app/main/default/objects/Contact/fields/Marketing_emails_clicked__c.field-meta.xml
<CustomField>
    <fullName>Marketing_emails_clicked__c</fullName>
    <label>Marketing emails clicked</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>