force-app/main/default/objects/Contact/fields/Meeting_Type_CP__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type_CP__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Discovery Call - SDR Sourced</fullName>
            </value>
            <value>
                <fullName>Discovery Call SDR - Outbound</fullName>
            </value>
            <value>
                <fullName>Discovery Call - AE Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>