force-app/main/default/objects/Contact/fields/Membership_Priority_Level_Tier__c.field-meta.xml
<CustomField>
    <fullName>Membership_Priority_Level_Tier__c</fullName>
    <label>Membership Priority Level // Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>