force-app/main/default/objects/Contact/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>