force-app/main/default/objects/Contact/fields/Mobile_Phone_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Cognism__c</fullName>
    <label>Mobile Phone (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>