force-app/main/default/objects/Contact/fields/MQL_Disposition__c.field-meta.xml
<CustomField>
    <fullName>MQL_Disposition__c</fullName>
    <label>MQL Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disqualify</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>