force-app/main/default/objects/Contact/fields/MQL_Disposition_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>MQL_Disposition_Additional_Details__c</fullName>
    <label>MQL Disposition Additional Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>