force-app/main/default/objects/Contact/fields/Nature_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business__c</fullName>
    <label>Nature of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nature_of_Business</valueSetName>
    </valueSet>
</CustomField>