force-app/main/default/objects/Contact/fields/Nature_Of_Business_DA__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Business_DA__c</fullName>
    <label>Nature Of Business DA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nature_of_Business</valueSetName>
    </valueSet>
</CustomField>