force-app/main/default/objects/Contact/fields/Notes_Booth_Visit__c.field-meta.xml
<CustomField>
    <fullName>Notes_Booth_Visit__c</fullName>
    <label>Notes - Booth Visit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>