force-app/main/default/objects/Contact/fields/Number_of_Employees_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_Cognism__c</fullName>
    <label>Number of Employees (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>