force-app/main/default/objects/Contact/fields/Number_of_page_views__c.field-meta.xml
<CustomField>
    <fullName>Number_of_page_views__c</fullName>
    <label>Number of page views</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>