force-app/main/default/objects/Contact/fields/Number_of_sequences_enrolled__c.field-meta.xml
<CustomField>
    <fullName>Number_of_sequences_enrolled__c</fullName>
    <label>Number of sequences enrolled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>