force-app/main/default/objects/Contact/fields/Number_of_unique_forms_submitted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_unique_forms_submitted__c</fullName>
    <label>Number of unique forms submitted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>