force-app/main/default/objects/Contact/fields/Office_Phone_Extension_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Office_Phone_Extension_Cognism__c</fullName>
    <label>Office Phone Extension (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>