force-app/main/default/objects/Contact/fields/Opted_Out_of_Email_Circle_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_of_Email_Circle_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Circle Newsletter</label>
    <type>Checkbox</type>
</CustomField>