force-app/main/default/objects/Contact/fields/Opted_Out_of_Email_One_to_One__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_of_Email_One_to_One__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: One to One</label>
    <type>Checkbox</type>
</CustomField>