force-app/main/default/objects/Contact/fields/Opted_Out_of_Email_Pressroom_Subscripti__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_of_Email_Pressroom_Subscripti__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Pressroom Subscript.</label>
    <type>Checkbox</type>
</CustomField>