force-app/main/default/objects/Contact/fields/Opted_Out_of_Email_Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_of_Email_Product_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Product Info/Updates</label>
    <type>Checkbox</type>
</CustomField>