force-app/main/default/objects/Contact/fields/Opted_Out_of_Email_Support_Sales_and_A__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_of_Email_Support_Sales_and_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Support/Sales/Acct</label>
    <type>Checkbox</type>
</CustomField>