force-app/main/default/objects/Contact/fields/Opted_Out_of_Email_The_Money_Movement__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_of_Email_The_Money_Movement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: The Money Movement</label>
    <type>Checkbox</type>
</CustomField>