force-app/main/default/objects/Contact/fields/Opted_Out_of_Email_Transactional__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_of_Email_Transactional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Transactional</label>
    <type>Checkbox</type>
</CustomField>