force-app/main/default/objects/Contact/fields/Opted_Out_of_Email_Webinars_Events__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_of_Email_Webinars_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Webinars &amp; Events</label>
    <type>Checkbox</type>
</CustomField>