force-app/main/default/objects/Contact/fields/Orignal_GCLID__c.field-meta.xml
<CustomField>
    <fullName>Orignal_GCLID__c</fullName>
    <description>Original Google Ads click ID</description>
    <label>Original GCLID</label>
    <type>TextArea</type>
</CustomField>