force-app/main/default/objects/Contact/fields/Outbound_Lead__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound Lead</label>
    <type>Checkbox</type>
</CustomField>