force-app/main/default/objects/Contact/fields/Outbound_Target__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Target__c</fullName>
    <label>Outbound Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>