force-app/main/default/objects/Contact/fields/PDR_Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>PDR_Follow_Up_Notes__c</fullName>
    <description>Used by SDRs to document any follow up notes</description>
    <inlineHelpText>Please provide any applicable notes regarding the follow up discussion</inlineHelpText>
    <label>PDR Follow Up Notes</label>
    <type>TextArea</type>
</CustomField>