force-app/main/default/objects/Contact/fields/PDR_Follow_Up_Reminder__c.field-meta.xml
<CustomField>
    <fullName>PDR_Follow_Up_Reminder__c</fullName>
    <description>Used by PDRs to set a reminder for them to follow up with the prospect.</description>
    <inlineHelpText>When would you like to follow up with this prospect?</inlineHelpText>
    <label>PDR Follow Up Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>