force-app/main/default/objects/Contact/fields/PDR_Follow_Up_Reminder_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>PDR_Follow_Up_Reminder_Timestamp__c</fullName>
    <label>PDR Follow Up Reminder Timestamp</label>
    <type>DateTime</type>
</CustomField>