force-app/main/default/objects/Contact/fields/PDR_Follow_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>PDR_Follow_Up_Type__c</fullName>
    <description>Used by PDRs to document what they are following up with the prospect about</description>
    <inlineHelpText>Please select the best option to describe what the follow up will be about.</inlineHelpText>
    <label>PDR Follow Up Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mint Qualification</fullName>
            </value>
            <value>
                <fullName>Target Account Qualification</fullName>
            </value>
            <value>
                <fullName>Legal/RFI Outstanding</fullName>
            </value>
            <value>
                <fullName>W3S Interest</fullName>
            </value>
            <value>
                <fullName>Alliance Interest</fullName>
            </value>
            <value>
                <fullName>Co-marketing Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>