force-app/main/default/objects/Contact/fields/PDR_Owner_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>PDR_Owner_Meeting_Link__c</fullName>
    <formula>Account.PDR_Owner__r.Meeting_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDR Owner Meeting Link</label>
    <type>Text</type>
</CustomField>