force-app/main/default/objects/Contact/fields/PDR_Owner_text__c.field-meta.xml
<CustomField>
    <fullName>PDR_Owner_text__c</fullName>
    <formula>Account.PDR_Owner_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDR Owner (text)</label>
    <type>Text</type>
</CustomField>