force-app/main/default/objects/Contact/fields/Platform_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Platform_Maturity__c</fullName>
    <description>Is there an existing platform with customers, or is this a new build?</description>
    <inlineHelpText>Is there an existing platform with customers, or is this a new build?</inlineHelpText>
    <label>Platform Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Platform</fullName>
            </value>
            <value>
                <fullName>New Build</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>