force-app/main/default/objects/Contact/fields/Platform_Owner_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Platform_Owner_Meeting_Link__c</fullName>
    <description>This is used to get the text value to display in Salesloft</description>
    <formula>Account.Platform_Owner_Meeting_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform Owner Meeting Link</label>
    <type>Text</type>
</CustomField>