force-app/main/default/objects/Contact/fields/Platform_Owner_text__c.field-meta.xml
<CustomField>
    <fullName>Platform_Owner_text__c</fullName>
    <description>This is used to get the text value to display in Salesloft</description>
    <formula>Account.Platform_Owner_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform Owner (text)</label>
    <type>Text</type>
</CustomField>