force-app/main/default/objects/Contact/fields/Primary_Place_Of_Business_DA__c.field-meta.xml
<CustomField>
    <fullName>Primary_Place_Of_Business_DA__c</fullName>
    <label>Primary Place Of Business DA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_of_Incorporation</valueSetName>
    </valueSet>
</CustomField>