force-app/main/default/objects/Contact/fields/Primary_state__c.field-meta.xml
<CustomField>
    <fullName>Primary_state__c</fullName>
    <label>Primary State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>