force-app/main/default/objects/Contact/fields/Principal_Place_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Principal_Place_of_Business__c</fullName>
    <description>In what state is their principal place of business (PPOB) located?</description>
    <inlineHelpText>In what state is their principal place of business (PPOB) located?</inlineHelpText>
    <label>Principal Place of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>