force-app/main/default/objects/Contact/fields/Privacy_Consent__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Consent__c</fullName>
    <label>Privacy Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>