force-app/main/default/objects/Contact/fields/Product_Application_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Application_Interest__c</fullName>
    <label>Product Application Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Circle Account</fullName>
            </value>
            <value>
                <fullName>Circle Yield</fullName>
            </value>
            <value>
                <fullName>Circle APIs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>