force-app/main/default/objects/Contact/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Circle Account</fullName>
            </value>
            <value>
                <fullName>Core API</fullName>
            </value>
            <value>
                <fullName>USDC Express</fullName>
            </value>
            <value>
                <fullName>Accounts API</fullName>
            </value>
            <value>
                <fullName>Crypto Deposits</fullName>
            </value>
            <value>
                <fullName>Crypto Payouts</fullName>
            </value>
            <value>
                <fullName>PSP Crypto Settlements</fullName>
            </value>
            <value>
                <fullName>Programmable Wallets</fullName>
            </value>
            <value>
                <fullName>Smart Contract Platform</fullName>
            </value>
            <value>
                <fullName>Gas Station</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>