force-app/main/default/objects/Contact/fields/Product_Interest_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest_Handoff__c</fullName>
    <inlineHelpText>This field is required for SDR to Seller handoff.</inlineHelpText>
    <label>Product Interest Handoff</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Treasury Handoff</fullName>
            </value>
            <value>
                <fullName>Platform Handoff</fullName>
            </value>
            <value>
                <fullName>Business Development Handoff</fullName>
            </value>
            <value>
                <fullName>Cybavo</fullName>
            </value>
            <value>
                <fullName>Verite</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>