force-app/main/default/objects/Contact/fields/project_status__c.field-meta.xml
<CustomField>
    <fullName>project_status__c</fullName>
    <description>Verite discovery questions</description>
    <inlineHelpText>Does the company have an active project (ie. working website or application)?</inlineHelpText>
    <label>Project status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>