force-app/main/default/objects/Contact/fields/Proposed_Usage_Model_App_for_USDC__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Usage_Model_App_for_USDC__c</fullName>
    <description>Used by the Inside Sales team during their discovery calls.</description>
    <inlineHelpText>What is the prospect&apos;s proposed usage model/application for USDC?</inlineHelpText>
    <label>Proposed Usage Model/App for USDC</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>