force-app/main/default/objects/Contact/fields/Qualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Notes__c</fullName>
    <description>Used for any additional notes taken during the discovery call.</description>
    <label>Qualification Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>