force-app/main/default/objects/Contact/fields/Recent_Sales_Email_Replied_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Sales_Email_Replied_Date__c</fullName>
    <label>Recent Sales Email Replied Date</label>
    <type>Date</type>
</CustomField>