force-app/main/default/objects/Contact/fields/Replied_to_Cadence_in_Last_180_Days__c.field-meta.xml
<CustomField>
    <fullName>Replied_to_Cadence_in_Last_180_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replied to Cadence in Last 180 Days</label>
    <type>Checkbox</type>
</CustomField>