force-app/main/default/objects/Contact/fields/Research_Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Research_Business_Description__c</fullName>
    <description>Used by the Inside Sales team to research a business and provide any additional details</description>
    <inlineHelpText>Brief description of business from Inside Sales research</inlineHelpText>
    <label>Research: Business Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>