force-app/main/default/objects/Contact/fields/Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory__c</fullName>
    <label>Sales Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>TOLA</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>