force-app/main/default/objects/Contact/fields/Salesloft_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Bounce__c</fullName>
    <description>Whether this contact&apos;s current email address has bounced in Salesloft</description>
    <inlineHelpText>Whether this contact&apos;s current email address has bounced in Salesloft</inlineHelpText>
    <label>Salesloft Bounce</label>
    <type>TextArea</type>
</CustomField>