force-app/main/default/objects/Contact/fields/Salesloft_Emails_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Emails_Bounced__c</fullName>
    <description>the number of Salesloft emails that have bounced to this contact&apos;s email</description>
    <inlineHelpText>the number of Salesloft emails that have bounced to this contact&apos;s email</inlineHelpText>
    <label>Salesloft Emails Bounced</label>
    <length>4</length>
    <type>Text</type>
</CustomField>