force-app/main/default/objects/Contact/fields/Salesloft_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Emails_Sent__c</fullName>
    <label>Salesloft Emails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>